[gd_scene load_steps=31 format=3 uid="uid://c555fglxjvpj3"]

[ext_resource type="Script" uid="uid://b2l4iyckvcr84" path="res://game/game_manager.gd" id="1_f14q8"]
[ext_resource type="Script" uid="uid://2h2hxw8gmy6d" path="res://orbital_path/orbit_manager.gd" id="1_magnn"]
[ext_resource type="Script" uid="uid://do6h34ao68sxk" path="res://structures/structure_manager.gd" id="2_f14q8"]
[ext_resource type="PackedScene" uid="uid://dfg7ai1lcj16x" path="res://user_interface/structure_select_menu.tscn" id="4_l4p2h"]
[ext_resource type="Script" uid="uid://c1v17ry0g2y7i" path="res://wave_spawner/wave_manager.gd" id="4_ny0yt"]
[ext_resource type="Script" uid="uid://dtyeile0inn5h" path="res://wave_spawner/wave.gd" id="5_716vl"]
[ext_resource type="PackedScene" uid="uid://wwtfyksvyhoa" path="res://enemies/scenes/asteroid.tscn" id="5_vmnpn"]
[ext_resource type="Script" uid="uid://5vklweqpw355" path="res://wave_spawner/enemy_sequence.gd" id="6_jp05k"]
[ext_resource type="PackedScene" uid="uid://b6n1uariimoo5" path="res://user_interface/wave_ui.tscn" id="9_716vl"]
[ext_resource type="PackedScene" uid="uid://b7l1b4j1o0jcm" path="res://user_interface/currency_ui.tscn" id="10_dj236"]
[ext_resource type="PackedScene" uid="uid://f6v8ljlsk4vw" path="res://structures/scenes/planet.tscn" id="10_jp05k"]

[sub_resource type="Resource" id="Resource_heu4h"]
script = ExtResource("6_jp05k")
enemy = ExtResource("5_vmnpn")
amount = 2
time = 0.0
metadata/_custom_type_script = "uid://5vklweqpw355"

[sub_resource type="Resource" id="Resource_6ixe2"]
script = ExtResource("5_716vl")
enemy_sequences = Array[ExtResource("6_jp05k")]([SubResource("Resource_heu4h")])
time_to_next_wave = 2.0
metadata/_custom_type_script = "uid://dtyeile0inn5h"

[sub_resource type="Resource" id="Resource_ark2v"]
script = ExtResource("6_jp05k")
enemy = ExtResource("5_vmnpn")
amount = 2
time = 0.0
metadata/_custom_type_script = "uid://5vklweqpw355"

[sub_resource type="Resource" id="Resource_2tt2a"]
script = ExtResource("6_jp05k")
enemy = ExtResource("5_vmnpn")
amount = 2
time = 1.0
metadata/_custom_type_script = "uid://5vklweqpw355"

[sub_resource type="Resource" id="Resource_emb83"]
script = ExtResource("5_716vl")
enemy_sequences = Array[ExtResource("6_jp05k")]([SubResource("Resource_ark2v"), SubResource("Resource_2tt2a")])
time_to_next_wave = 2.0
metadata/_custom_type_script = "uid://dtyeile0inn5h"

[sub_resource type="Resource" id="Resource_t6ilw"]
script = ExtResource("6_jp05k")
enemy = ExtResource("5_vmnpn")
amount = 3
time = 0.0
metadata/_custom_type_script = "uid://5vklweqpw355"

[sub_resource type="Resource" id="Resource_k8ops"]
script = ExtResource("6_jp05k")
enemy = ExtResource("5_vmnpn")
amount = 3
time = 3.0
metadata/_custom_type_script = "uid://5vklweqpw355"

[sub_resource type="Resource" id="Resource_l1her"]
script = ExtResource("6_jp05k")
enemy = ExtResource("5_vmnpn")
amount = 3
time = 5.0
metadata/_custom_type_script = "uid://5vklweqpw355"

[sub_resource type="Resource" id="Resource_vppyi"]
script = ExtResource("5_716vl")
enemy_sequences = Array[ExtResource("6_jp05k")]([SubResource("Resource_t6ilw"), SubResource("Resource_k8ops"), SubResource("Resource_l1her")])
time_to_next_wave = 2.0
metadata/_custom_type_script = "uid://dtyeile0inn5h"

[sub_resource type="Resource" id="Resource_jp05k"]
script = ExtResource("6_jp05k")
enemy = ExtResource("5_vmnpn")
amount = 5
time = 0.0
metadata/_custom_type_script = "uid://5vklweqpw355"

[sub_resource type="Resource" id="Resource_ne2v2"]
script = ExtResource("6_jp05k")
enemy = ExtResource("5_vmnpn")
amount = 5
time = 3.0
metadata/_custom_type_script = "uid://5vklweqpw355"

[sub_resource type="Resource" id="Resource_m4f7c"]
script = ExtResource("5_716vl")
enemy_sequences = Array[ExtResource("6_jp05k")]([SubResource("Resource_jp05k"), SubResource("Resource_ne2v2")])
time_to_next_wave = 2.0
metadata/_custom_type_script = "uid://dtyeile0inn5h"

[sub_resource type="Resource" id="Resource_cg64h"]
script = ExtResource("6_jp05k")
enemy = ExtResource("5_vmnpn")
amount = 5
time = 2.0
metadata/_custom_type_script = "uid://5vklweqpw355"

[sub_resource type="Resource" id="Resource_xdck1"]
script = ExtResource("6_jp05k")
enemy = ExtResource("5_vmnpn")
amount = 3
time = 4.0
metadata/_custom_type_script = "uid://5vklweqpw355"

[sub_resource type="Resource" id="Resource_2c3h1"]
script = ExtResource("5_716vl")
enemy_sequences = Array[ExtResource("6_jp05k")]([SubResource("Resource_jp05k"), SubResource("Resource_cg64h"), SubResource("Resource_xdck1")])
time_to_next_wave = 2.0
metadata/_custom_type_script = "uid://dtyeile0inn5h"

[sub_resource type="Resource" id="Resource_dj236"]
script = ExtResource("6_jp05k")
enemy = ExtResource("5_vmnpn")
amount = 5
time = 0.0
metadata/_custom_type_script = "uid://5vklweqpw355"

[sub_resource type="Resource" id="Resource_8ato5"]
script = ExtResource("6_jp05k")
enemy = ExtResource("5_vmnpn")
amount = 5
time = 1.0
metadata/_custom_type_script = "uid://5vklweqpw355"

[sub_resource type="Resource" id="Resource_tn6ho"]
script = ExtResource("6_jp05k")
enemy = ExtResource("5_vmnpn")
amount = 5
time = 3.0
metadata/_custom_type_script = "uid://5vklweqpw355"

[sub_resource type="Resource" id="Resource_atfu6"]
script = ExtResource("5_716vl")
enemy_sequences = Array[ExtResource("6_jp05k")]([SubResource("Resource_dj236"), SubResource("Resource_8ato5"), SubResource("Resource_tn6ho")])
time_to_next_wave = 2.0
metadata/_custom_type_script = "uid://dtyeile0inn5h"

[node name="TestScene" type="Node2D"]
script = ExtResource("1_f14q8")

[node name="OrbitManager" type="Node2D" parent="."]
script = ExtResource("1_magnn")

[node name="StructureManager" type="Node" parent="."]
script = ExtResource("2_f14q8")
metadata/_custom_type_script = "uid://do6h34ao68sxk"

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("4_ny0yt")
waves = Array[ExtResource("5_716vl")]([SubResource("Resource_6ixe2"), SubResource("Resource_emb83"), SubResource("Resource_vppyi"), SubResource("Resource_m4f7c"), SubResource("Resource_2c3h1"), SubResource("Resource_atfu6")])
metadata/_custom_type_script = "uid://c1v17ry0g2y7i"

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="StructureSelectMenu" parent="UILayer" instance=ExtResource("4_l4p2h")]
offset_left = -2.0
offset_top = 132.0
offset_right = -2.0
offset_bottom = 132.0

[node name="WaveUI" parent="UILayer" instance=ExtResource("9_716vl")]

[node name="CurrencyUI" parent="UILayer" instance=ExtResource("10_dj236")]
offset_left = -1001.0
offset_top = 331.0
offset_right = -1001.0
offset_bottom = 331.0

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3620.0
offset_top = -2036.0
offset_right = -1700.0
offset_bottom = -956.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Planet" parent="." instance=ExtResource("10_jp05k")]

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2(958, 540)
